<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/welcome_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        android:scaleType="centerCrop"
        app:lottie_clipToCompositionBounds="false"
        app:lottie_fileName="default_background.json"
        app:lottie_loop="false" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vpMain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:contentDescription="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarMain"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            app:layout_scrollFlags="scroll|snap"
            app:tabGravity="fill"
            app:tabIconTint="@color/white"
            app:tabIndicator="@drawable/inset_tab_indicator_selected"
            app:tabIndicatorAnimationDuration="500"
            app:tabIndicatorAnimationMode="linear"
            app:tabIndicatorColor="@color/selected"
            app:tabIndicatorFullWidth="false"
            app:tabIndicatorGravity="stretch"
            app:tabInlineLabel="true"
            app:tabMode="fixed"
            app:tabPadding="0dp"
            app:tabTextAppearance="@style/CustomTabStyle"
            app:tabTextColor="@color/white">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_discount"
                android:text="@string/promo" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_home"
                android:text="@string/home" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_chat"
                android:text="@string/chat" />
        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.constraintlayout.widget.ConstraintLayout>