<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/close"
        android:src="@drawable/ic_close"
        app:backgroundTint="@color/white"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom"
        android:clickable="true"
        android:focusable="true"
        android:paddingTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/choose_language"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:text="@string/what_language_do_you_want_to_use"
            android:textColor="@color/text_secondary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="58dp">

                <TextView
                    android:id="@+id/tvCodeEN"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/btn_primary"
                    android:backgroundTint="@color/blue"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/en"
                    android:textAlignment="center"
                    android:textColor="#FFF"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/english"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/tvCodeEN"
                    app:layout_constraintEnd_toStartOf="@+id/ivChooseEN"
                    app:layout_constraintStart_toEndOf="@+id/tvCodeEN"
                    app:layout_constraintTop_toTopOf="@+id/tvCodeEN" />

                <ImageView
                    android:id="@+id/ivChooseEN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:contentDescription="@string/choose_language"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_check_circle_24" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="58dp">

                <TextView
                    android:id="@+id/tvCodeID"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/btn_primary"
                    android:backgroundTint="@color/light_primary"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/id"
                    android:textAlignment="center"
                    android:textColor="#FFF"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/indonesia"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/tvCodeID"
                    app:layout_constraintEnd_toStartOf="@+id/ivChooseIN"
                    app:layout_constraintStart_toEndOf="@+id/tvCodeID"
                    app:layout_constraintTop_toTopOf="@+id/tvCodeID" />

                <ImageView
                    android:id="@+id/ivChooseIN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:contentDescription="@string/choose_language"
                    android:tint="@color/greenChecked"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_check_circle_24" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="58dp">

                <TextView
                    android:id="@+id/tvCodeTH"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/btn_primary"
                    android:backgroundTint="@color/yellow"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/th"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/thailand"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/tvCodeTH"
                    app:layout_constraintEnd_toStartOf="@+id/ivChooseTH"
                    app:layout_constraintStart_toEndOf="@+id/tvCodeTH"
                    app:layout_constraintTop_toTopOf="@+id/tvCodeTH" />

                <ImageView
                    android:id="@+id/ivChooseTH"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:contentDescription="@string/choose_language"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_check_circle_24" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="58dp">

                <TextView
                    android:id="@+id/tvCodeVI"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/btn_primary"
                    android:backgroundTint="@color/red"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/vi"
                    android:textAlignment="center"
                    android:textColor="#FFF"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/vietnam"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/tvCodeVI"
                    app:layout_constraintEnd_toStartOf="@+id/ivChooseVI"
                    app:layout_constraintStart_toEndOf="@+id/tvCodeVI"
                    app:layout_constraintTop_toTopOf="@+id/tvCodeVI" />

                <ImageView
                    android:id="@+id/ivChooseVI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:contentDescription="@string/choose_language"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_check_circle_24" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>